Fix navbar margin-bottom not showing 11px

--- a/opera_museum/museum/static/museum/css/index.css
+++ b/opera_museum/museum/static/museum/css/index.css
@@ -12,11 +12,6 @@
 .museum-main-container {
     width: 100%;
     background-color: #ededed;
-    /*
-    -moz-box-shadow:    inset 0 12px 20px -10px #bebfc0;
-    -webkit-box-shadow: inset 0 12px 20px -10px #bebfc0;
-    box-shadow:         inset 0 12px 20px -10px #bebfc0;
-    */
 }
 
 .museum-container {
